Adds changes to draft